# mvc_dj_bpm

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: log.py
src/controllers/: beat_controller.py  controller_interface.py
src/model/: beat_model.py  beat_model_interface.py
src/observers/: beat_observer.py  bpm_observer.py
src/views/: dj_view.py
tests/: main_test.py
